# MachineLearning

./: .gitignore  PLA.c  Pratica___PLA.ipynb  README.md  comparar.ipynb  ler_tabela.ipynb  tabela_brasileiro.txt  tabela_brasileiro_texte.txt  tabela_bundesliga_18.txt  tabela_bundesliga_18_texte.txt  tabela_frances.txt  tabela_frances_texte.txt  tabela_holandes_18.txt  tabela_holandes_18_texte.txt  tabela_italiano.txt  tabela_italiano_texte.txt  tabela_la_liga.txt  tabela_la_liga_texte.txt  tabela_premier.txt  tabela_premier_texte.txt  teste.csv  treino.csv
IdeiaI/: MapsAPI.ipynb
Pratica1_PLA/: PLA.c
Prática Regressão Logística/: Prática3_ROC_AUC.ipynb
Práticas Modelo Linear 1/: Prática1_SimpleSpam.ipynb
Regularização_Validação/: Prática1_Regularização - Heurística Weight Decay.ipynb
TeoriasPraticas/: Links.txt  heart_attack_pred.ipynb
ler_tabela/: comparar.ipynb  ler_tabela.ipynb  players_info.csv  rede_neural.ipynb  tabela_brasileiro.txt  tabela_brasileiro_texte.txt  tabela_bundesliga_18.txt  tabela_bundesliga_18_texte.txt  tabela_frances.txt  tabela_frances_texte.txt  tabela_holandes_18.txt  tabela_holandes_18_texte.txt  tabela_italiano.txt  tabela_italiano_texte.txt  tabela_la_liga.txt  tabela_la_liga_texte.txt  tabela_premier.txt  tabela_premier_texte.txt  teste.csv  tratamento_dados.ipynb  (+1 more)
ml_framework/: CMakeLists.txt  exe.sh  main.cpp
ml_framework/include/:  Metrics.h  LRClassifier.h  LinearRegression.h  Metrics.h  Model.h  PocketPLA.h  TrainingConfig.h
ml_framework/src/: LRClassifier.cpp  LinearRegression.cpp  Metrics.cpp  PocketPLA.cpp
(+28 files in other folders)
